Update theme version and name
Signed-off-by: Seth <seth@eventespresso.com>

--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /*
-Theme Name: Baskerville -- Optimized for Event Smart
+Theme Name: Baskerville -- Optimized for Event Espresso
 Theme URI: https://eventsmart.com
 Description: Baskerville is a beautiful, responsive and retina-ready masonry theme for hoarders. It’s the perfect way to showcase your events end venues. Features responsive design, retina-ready assets, full-width header image, support for all post formats, custom logo upload, custom widgets (video, Flickr and Dribbble), four page templates (including a contributors template) and editor styling.
 Optimized for eventsmart.com
 Author: Event Smart & Anders Norén
 Author URI: https://eventsmart.com
 Template:     baskerville
-Version:      1.0.1
+Version:      1.0.2
 Tags: black, dark, white, green, two-columns, fluid-layout, responsive-layout, custom-header, custom-menu, featured-images, flexible-header, post-formats, sticky-post, threaded-comments, translation-ready, editor-style
 Text Domain:  baskerville__optimized_for_event_smart
 */
