--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Baskerville -- Optimized for Event Espresso 4
 Theme URI: http://espressothemes.com/downloads/baskerville-child-theme-for-event-espresso/
 Description: Baskerville is a beautiful, responsive and retina-ready masonry theme for hoarders. It’s the perfect way to showcase your events end venues. Features responsive design, retina-ready assets, full-width header image, support for all post formats, custom logo upload, custom widgets (video, Flickr and Dribbble), four page templates (including a contributors template) and editor styling.
 Optimized for Event Espresso 4
-Author: Event Smart & Anders Norén
+Author: Espresso Themes & Anders Norén
 Author URI: http://espressothemes.com/
 Template:     baskerville
 Version:      1.0.2
